# A-study-note-as-a-beginner

./: .dccache  .gitignore  .top-level-store-depth-first.md.swp  .workout_tp.md.swp  MB_GIT.md  README.md  _COMMITMENT-ON-HALT.md  _COMMITMENT.md  _ENTRY.md  _IMPROVE.md  _INBOUND.md  _OUTBOUND.md  _PROCESSING.MD  _PROCESSING.config  _PROCESSING.md  _SCHEDULER.md  _STATE.md  _index.md  agenda.md  basics.md  buffer-to-beginner-edition.md  daily-training.md  deploy.sh  deployMultiTenant.sh  feishu-plannung.md  gesetzgründlicheselbstbeschützung.md  gesunheitsbeschüzung.md  git-switch.sh  global-roadmap.md  group-play.md  index.html  kongreznote.md  kontoanmeldungkontrol.md  kontoanmeldungskontrol.md  log_overall.md  log_self-evaluation.md  neural-level-adjustment.md  overall.md  overall_archived.md  package-lock.json  (+15 more)
.obsidian/: app.json  appearance.json  bookmarks.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  publish.json  starred.json  workspace  workspace.json
Art/: log-webdsn.md  roadmap-ds.md  roadmap-ms.md  roadmap.md  terminology-ds.md  terminology.md
Art-and-Media/: terminology-ms.md
Art-media-and-Hospitality/: art_arsenal.md  roadmap-bc.md  roadmap-pn.md
Astronomy/: paper-reading-AS.md  terminology-AST_geo.md
Entrepreneurship/: basics.md  entrepreneurial-landscape.md  erudition-E.md  ideas.md
Heuristics/: POI.md  academic.md  ambidexterity.md  career.md  chess.md  coding.md  (+9 more)
_intel-core/intel-agents/: pyproject.toml
_intel-core/intel-agents/intel-asset-embedder/: README.md  pyproject.toml  setup.cfg  setup.py
(+1801 files in other folders)
