[tool.poetry]
name = "intel-agents"
version = "0.1.0"
description = "Some intel agents"
authors = ["zhutoutoutousan <mxyuiiu64545@126.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "intel_agents"}]

[tool.poetry.dependencies]
python = "^3.11"
dagster = "^1.3.13"
dagit = "^1.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
